--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       1. กฤติพงษ์ หอมพันนา ม.3/2 เลขที่ 1 (ผู้เขียนโปรแกรม)<br>
       2. รัชพล คัมภิรานนท์ ม.3/2 เลขที่ 9 (ผู้หาข้อมูล)<br>
       3. ชัยมงคล ยันเสนา ม.3/2 เลขที่ 2 (ผู้ช่วยผู้หาข้อมูล)<br>
+      <strong>ข้อมูล :</strong><br>
+      1. เป็นตัว open source<br>
     </div>
   </div>
   <script src="script.js"></script>
