--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="howto" style="display:none; margin-top: 1rem; text-align:left; font-size: 0.9rem;">
       <strong>วิธีเล่น:</strong><br>
       - เกมนี้จะสร้างโจทย์เลขอัตโนมัติตามเลเวลที่เพิ่มขึ้น<br>
-      - ผู้เล่นมีเวลา 1 ชั่วโมงในการตอบโจทย์ให้ได้มากที่สุด<br>
+      - ผู้เล่นมีเวลา 10 นาทีในการตอบโจทย์ให้ได้มากที่สุด<br>
       - กด 'ส่งคำตอบ' เพื่อเช็คคำตอบ<br>
       - เกมจะจบเมื่อเวลาหมด หรือ ตอบผิด<br>
       <br>
