--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
   </div>
   <script src="script.js"></script>
   <script src="debug.js"></script>
+  <script src="info.js"></script>
 </body>
 </html>
