--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@400;700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="loading-screen">
+    <div class="loader"></div>
+    <p>กำลังโหลด...</p>
+  </div>
+  
   <div class="container">
     <h1 class="game-title">✨ Math Fun! ✨</h1>
 
