--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cute Minimal Math Game</title>
+  <title>เกมคิดคำนวน แบบไม่มีที่สิ้นสุด</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@400;700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 </head>
